[metadata]
name = CrossCompatHexEditorAnalyzer
version = 1.0.0
description = Cross-Platform Hex Editor and Analyzer with Malware Detection and PE/ELF Support
author = TheTrueLegitBoss
author_email = your@email.com
url = https://github.com/TheTrueLegitBoss/Cross-Compatable-Hex-Editor-Alalyzer
license = MIT

[options]
py_modules = HexEditor
python_requires = >=3.7
